add contact and nav

--- a/milestone-portfolio-project/index.html
+++ b/milestone-portfolio-project/index.html
@@ -11,7 +11,19 @@
     	<body>
     		<main>
    	    	<header>
-   		   		<div class="about">
+   		   		<div class="intro">
+
+              <div id="nav">
+                <ul>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="work/index.html">Portfolio</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                </ul>
+              </div>  
+
+            </div>
+
+            <div class="about">
    		   		</div>
    		   
 
@@ -20,9 +32,9 @@
 
 
    		   		<div class="contact">
-   		   		<a href="http://https://www.linkedin.com/in/jace-romeo-010aa614" target="_blank"><img src="img/icon-linkedin.png" alt="linkedin"/></a>
-   		   		<a href="http://https://github.com/jaceromeo" target="_blank"><img src="img/icon-github.png" alt="github"/></a>	
-
+   		   		<a href="https://www.linkedin.com/in/jace-romeo-010aa614" target="_blank"><img src="img/icon-linkedin.png" alt="linkedin"/></a>
+   		   		<a href="https://github.com/jaceromeo" target="_blank"><img src="img/icon-github.png" alt="github"/></a>	
+            <a href="https://twitter.com/diversifiedinfo" target="_blank"><img src="img/twitter.png" alt="github"/></a> 
    		   		</div>	
 
 <footer>
