--- a/milestone-portfolio-project/index.html
+++ b/milestone-portfolio-project/index.html
@@ -12,6 +12,8 @@
     		<main>
    	    	<header>
    		   		<div class="intro">
+                <h1>Diversified Interactive</h1>
+                  <h2>Front-End Development, JavaScript, WordPress</h2>
 
               <div id="nav">
                 <ul>
@@ -24,10 +26,16 @@
             </div>
 
             <div class="about">
+                <h2>About Me</h2>
+                <img src=" "" alt="" />
+                <h3>I am passionate about Web Development</h3>
+                <p>Hello, my name is Jace Romeo and welcome to Diversified Interactive.  I am a risk management consultant for a large homebuilder and freelance web developer.  I specialize in front-end development, JavaScript and WordPress & I look forward to working with you.
+
+
    		   		</div>
    		   
 
-   		   		<div class ="work">
+   		   		<div class ="portfolio">
    		   		</div>
 
 
@@ -38,7 +46,7 @@
    		   		</div>	
 
 <footer>
-
+<h6>Copyright 2019 | Diversified Interactive </h6>
 
 </footer>
     
