intro about portfolio HMTL

--- a/milestone-portfolio-project/index.html
+++ b/milestone-portfolio-project/index.html
@@ -11,7 +11,7 @@
     	<body>
     		<main>
    	    	<header>
-   		   		<div class="intro">
+   		   		  <div class="intro">
                 <h1>Diversified Interactive</h1>
                   <h2>Front-End Development, JavaScript, WordPress</h2>
 
@@ -22,21 +22,40 @@
                   <li><a href="#contact">Contact</a></li>
                 </ul>
               </div>  
-
-            </div>
+              </div>
 
             <div class="about">
-                <h2>About Me</h2>
+                <h2>Welcome to Diversified Interactive</h2>
                 <img src=" "" alt="" />
-                <h3>I am passionate about Web Development</h3>
-                <p>Hello, my name is Jace Romeo and welcome to Diversified Interactive.  I am a risk management consultant for a large homebuilder and freelance web developer.  I specialize in front-end development, JavaScript and WordPress & I look forward to working with you.
+                <p>Hello, my name is Jace Romeo.  I am a risk management consultant for a large homebuilder and freelance web developer.  I specialize in front-end development, JavaScript and WordPress.</p>  
+
+                <h2>I look forward to working with you.</h2>
 
 
    		   		</div>
    		   
 
-   		   		<div class ="portfolio">
-   		   		</div>
+   		 	<section class ="portfolio">
+            
+            <div class="third-width">
+            <a href="" target="_blank"><img src="img/rogue.png" alt="rogue pickings"/></a>
+            <h3>Rogue Pickings Website</h3>
+            <p>HTML & CSS from Photoshop Design</p>
+  		   		</div>
+
+            <div class="third-width">
+            <a href="" target="_blank"><img src="img/jubilee.png" alt="jubilee austen"/></a>
+            <h3>Jubilee Austen Project</h3>
+            <p>HTML5 & CSS Website</p>
+            </div>
+
+            <div class="third-width">
+            <a href="" target="_blank"><img src="img/distracted.png" alt="distracted driving"/></a>
+            <h3>Distracted Driving</h3>
+            <p>Custom website built from scratch</p>
+            </div>
+
+          </section>
 
 
    		   		<div class="contact">
