--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     		<main>
    	    	<header>
    		   		  <div class="intro">
-                <h1>Diversified Interactive</h1>
-                  <h2>Front-End Development, JavaScript, WordPress</h2>
+                <h1>Diversified Interactive</h1>   
 
               <div id="nav">
                 <ul>
@@ -59,14 +58,15 @@
 
 
    		   		<div class="contact">
-   		   		<a href="https://www.linkedin.com/in/jace-romeo-010aa614" target="_blank"><img src="img/icon-linkedin.png" alt="linkedin"/></a>
-   		   		<a href="https://github.com/jaceromeo" target="_blank"><img src="img/icon-github.png" alt="github"/></a>	
-            <a href="https://twitter.com/diversifiedinfo" target="_blank"><img src="img/twitter.png" alt="github"/></a> 
+   		   		<a href="https://www.linkedin.com/in/jace-romeo-010aa614" target="_blank"><img src="img/icon-linkedin.png" alt="Linkedin"/></a>
+   		   		<a href="https://github.com/jaceromeo" target="_blank"><img src="img/icon-github.png" alt="Github"/></a>	
+            <a href="https://twitter.com/diversifiedinfo" target="_blank"><img src="img/twitter.png" alt="Twitter"/></a> 
    		   		</div>	
 
 <footer>
-<h6>Copyright 2019 | Diversified Interactive </h6>
-
+<div class="footer">
+<h3>Copyright &copy; 2019 | Diversified Interactive </h3>
+</div>
 </footer>
     
 		</main>
