jubilee and css fixes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
               </div>
 
             <div class="about">
-                <h2>Welcome to Diversified Interactive</h2>
                 <img src=" "" alt="" />
-                <p>Hello, my name is Jace Romeo.  I am a risk management consultant for a large homebuilder and freelance web developer.  I specialize in front-end development, JavaScript and WordPress.</p>  
+                <p>Hello, my name is Jace Romeo.  I am a risk management consultant for a large homebuilder and freelance web developer.  </p>  
 
                 <h2>I look forward to working with you.</h2>
 
@@ -36,20 +35,29 @@
 
    		 	<section class ="portfolio">
             
-            <div class="third-width">
+            <div id="roguepic">
             <a href="" target="_blank"><img src="img/rogue.png" alt="rogue pickings"/></a>
+            </div>
+
+            <div id="roguetxt">
             <h3>Rogue Pickings Website</h3>
             <p>HTML & CSS from Photoshop Design</p>
   		   		</div>
 
-            <div class="third-width">
+            <div id="jubileepic">
             <a href="" target="_blank"><img src="img/jubilee.png" alt="jubilee austen"/></a>
+            </div>
+
+            <div id="jubileetxt">  
             <h3>Jubilee Austen Project</h3>
             <p>HTML5 & CSS Website</p>
             </div>
 
-            <div class="third-width">
+            <div id="distractedpic">
             <a href="" target="_blank"><img src="img/distracted.png" alt="distracted driving"/></a>
+            </div>
+
+            <div id="distractedtxt">
             <h3>Distracted Driving</h3>
             <p>Custom website built from scratch</p>
             </div>
