centered images, fixed css

--- a/index.html
+++ b/index.html
@@ -11,64 +11,45 @@
     	<body>
     		<main>
    	    	<header>
-   		   		  <div class="intro">
+   		   		<div class="intro">
                 <h1>Diversified Interactive</h1>   
-
-              <div id="nav">
-                <ul>
-                  <li><a href="#about">About</a></li>
-                  <li><a href="work/index.html">Portfolio</a></li>
-                  <li><a href="#contact">Contact</a></li>
-                </ul>
-              </div>  
-              </div>
+              		<div id="nav">
+                		<ul>
+		                  <li><a href="#about">About</a></li>
+        		          <li><a href="work/index.html">Portfolio</a></li>
+                		  <li><a href="#contact">Contact</a></li>
+                		</ul>
+              		</div>  
+              	</div>
 
             <div class="about">
-                <img src=" "" alt="" />
-                <p>Hello, my name is Jace Romeo.  I am a risk management consultant for a large homebuilder and freelance web developer.  </p>  
-
-                <h2>I look forward to working with you.</h2>
-
-
-   		   		</div>
+                <img src="img/jace.jpg" alt="jace romeo"/>
+                <h3>Hello, my name is Jace Romeo.  I am a risk management consultant for a large homebuilder and freelance web developer.</h3>  
+                <h3>I look forward to working with you.</h3>
+ 		   	</div>
    		   
 
-   		 	<section class ="portfolio">
-            
-            <div id="roguepic">
-            <a href="" target="_blank"><img src="img/rogue.png" alt="rogue pickings"/></a>
+   		<section class ="portfolio">
+        	<div class="rogue">
+            	<a href="" target="_blank"><img src="img/rogue.png" alt="rogue pickings"/></a>
+            		<h3>Rogue Pickings Website</h3>
+            			<p>HTML & CSS from Photoshop Design</p>
+  		   	</div>
+            <div class="jubilee">
+            	<a href="" target="_blank"><img src="img/jubilee.png" alt="jubilee austen"/></a>
+            		<h3>Jubilee Austen Project</h3>
+            			<p>HTML5 & CSS Website</p>
             </div>
-
-            <div id="roguetxt">
-            <h3>Rogue Pickings Website</h3>
-            <p>HTML & CSS from Photoshop Design</p>
-  		   		</div>
-
-            <div id="jubileepic">
-            <a href="" target="_blank"><img src="img/jubilee.png" alt="jubilee austen"/></a>
+            <div class="distracted">
+	            <a href="" target="_blank"><img src="img/distracted.png" alt="distracted driving"/></a>
+    		        <h3>Distracted Driving</h3>
+            			<p>Custom website built from scratch</p>
             </div>
-
-            <div id="jubileetxt">  
-            <h3>Jubilee Austen Project</h3>
-            <p>HTML5 & CSS Website</p>
-            </div>
-
-            <div id="distractedpic">
-            <a href="" target="_blank"><img src="img/distracted.png" alt="distracted driving"/></a>
-            </div>
-
-            <div id="distractedtxt">
-            <h3>Distracted Driving</h3>
-            <p>Custom website built from scratch</p>
-            </div>
-
-          </section>
-
-
+        </section>
    		   		<div class="contact">
-   		   		<a href="https://www.linkedin.com/in/jace-romeo-010aa614" target="_blank"><img src="img/icon-linkedin.png" alt="Linkedin"/></a>
-   		   		<a href="https://github.com/jaceromeo" target="_blank"><img src="img/icon-github.png" alt="Github"/></a>	
-            <a href="https://twitter.com/diversifiedinfo" target="_blank"><img src="img/twitter.png" alt="Twitter"/></a> 
+   		   			<a href="https://www.linkedin.com/in/jace-romeo-010aa614" target="_blank"><img src="img/linkedin.png" alt="Linkedin"/></a>
+   		   			<a href="https://github.com/jaceromeo" target="_blank"><img src="img/github.png" alt="Github"/></a>	
+            		<a href="https://twitter.com/diversifiedinfo" target="_blank"><img src="img/twitter.png" alt="Twitter"/></a> 
    		   		</div>	
 
 <footer>
