added portfolio files and links

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
    			<h2>Portfolio</h2>
    		</div>
    			<div class="rogue">
-            	<a href="" target="_blank"><img src="img/rogue.png" alt="rogue pickings"/></a>
+            	<a href="rogue-pickings/rogue-jace.html" target="_blank"><img src="img/rogue.png" alt="rogue pickings"/></a>
             		<h3>Rogue Pickings Website</h3>
             			<p>HTML & CSS from Photoshop Design</p>
   		   	</div>
             <div class="jubilee">
-            	<a href="" target="_blank"><img src="img/jubilee.png" alt="jubilee austen"/></a>
+            	<a href="jubilee/index.html" target="_blank"><img src="img/jubilee.png" alt="jubilee austen"/></a>
             		<h3>Jubilee Austen Project</h3>
             			<p>HTML5 & CSS Website</p>
             </div>
             <div class="distracted">
-	            <a href="" target="_blank"><img src="img/distracted.png" alt="distracted driving"/></a>
+	            <a href="distracted-driving/index.html" target="_blank"><img src="img/distracted.png" alt="distracted driving"/></a>
     		        <h3>Distracted Driving</h3>
             			<p>Custom website built from scratch</p>
            	</div>
